Version 1.0.0
2013-08-29 Stefan Busemann: Bug #51214 (resolved) PHP Warning: Creating default object from empty value indam_frontend/pushfile.php line 40 (thanks to Christophe Neria)
2013-07-16 Stefan Busemann: Bug #49408 (resvolved): mediaTypes does not work with MIME types that contain periods
2013-07-16 Stefan Busemann: Feature - Caching for Subcategories
2013-07-16 Stefan Busemann: Bug #48281 (Resolved): Browselinks not working in filelist
2013-02-07 Stefan Busemann: Feature - new Hook for rendering of the filter view $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['DAM_FRONTEND']['RENDER_FILTERVIEW_FILTERS']
2012-07-26 Stefan Busemann: Feature - filelist.securityOptions.allowServerRequest
2012-07-23 Stefan Busemann: Feature staticFilters - Filters can be defined via TS
2012-06-22 Stefan Busemann: new TS Option filelist.latestView.useGroupedFileList = 1 shows the latest view as a grouped file list
2011-12-29 Stefan Busemann: Bug #32585 (Resolved): tx_dam_cat read_access not merged for a document with many categories
2011-12-29 Stefan Busemann: Bug #32620 (Resolved): TCA configuration of tx_damfrontend_feuser_upload add allowed Typoscript change: The setting filelist.orderBy needs now a table name prefix. Example filelist.orderBy = tx_dam.crdate DESC
2013-03-27 Stefan Busemann: Bug #38182 (Resolved): Use Swift Mailer

Version 0.8.4
2011-12-29 Stefan Busemann: Bug #32838 (Resolved): Call to undefined method t3lib_div::GPvar() in /html/typo3/typo3conf/ext/d...

Version 0.8.2
2011-12-21 Stefan Busemann: Bug #32426 (Resolved): Deleted FE_groups are visible
2011-12-21 Stefan Busemann: Revision 55767: Bug #32711 (Resolved): Call to deprecated function in pushfile.php


Version 0.8.0
2011-07-01 Stefan Busemann: fixed bug #27804: latestView.limit does not work
2011-06-09 Stefan Busemann: added ts option filelist.groupedFileListGroupByTreeID – can be set to a tree ID so that the search result is grouped by the selected categories of this category selection